Integration_Examples/Inbound_Mexichem/objects/IntegrationMapChild__c.object
<CustomObject>
    <description>[a07][IntegrationMapChild__c] Mapa da integração filha.</description>
    <fields>
        <fullName>ChildLkp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapa de integração</label>
        <referenceTo>IntegrationMap__c</referenceTo>
        <relationshipLabel>Mapa da integração filha (Mapa de integração)</relationshipLabel>
        <relationshipName>Mapa_da_integra_o_filha</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderNmb__c</fullName>
        <label>Ordem</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentLkp__c</fullName>
        <label>Mapa de integração</label>
        <referenceTo>IntegrationMap__c</referenceTo>
        <relationshipLabel>Mapa da integração filha</relationshipLabel>
        <relationshipName>IntegratioMapParents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Mapa da integração filha</label>
    <nameField>
        <label>Nome de Mapa da integração filha</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapa da integração filha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>